fixed data params, selectors, post multiple

--- a/quotationsAPI/frontend/templates/index.html
+++ b/quotationsAPI/frontend/templates/index.html
@@ -19,8 +19,8 @@ ADD QUOTE
     Text: <input type="text" name="text" id="add_quote_text"><br />
     Author: <select name="author" id="author_select_1">
     </select><br/>
-    Subject: <select name="subject" id="subject_select_1">
-    </select><br/>    
+    Subject: <select multiple name="subject[]" id="subject_select_1">
+    </select>
     <input type="submit" name="add" value="add">
 </form>
 </section>
