--- a/quotationsAPI/static_content/static/quotationsAPI/css/global.css
+++ b/quotationsAPI/static_content/static/quotationsAPI/css/global.css
@@ -1,121 +1,31 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Bree+Serif);
 
-body { 
-    padding-top: 10px; 
-    font-family: 'Lato', sans-serif;
-    background-color: grey;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', sans-serif;
+body {
     text-align: center;
 }
 
-h2 {
-    margin-bottom: 15px;    
+h3, h4 {
+    display: inline;
 }
 
-.wrapper {
-    width: 100%; /* RWD */
-    margin: 0 auto;
-    padding: 15px;
-    text-align: center;
-    border-style: solid;    
-    border-width: 0px;
-    border-color: black;    
-    display: inline-block;
+div[class^='col-sm'] {
+    padding: 20px;
 }
 
-
-.container {
-    width: 90%; /* RWD */
-    max-width: 1024px;
-    margin: 0 auto;
-    padding: 15px;
-    text-align: center;
-/*    border-style: solid;    
-    border-width: 2px;
-    border-color: black;  */  
-    display: inline-block;
-    background-color: #AAEEEE;
-}
-
-.quotecontainer {
-    width: 90%; /* RWD */
-    max-width: 1024px;
-    margin: 0 auto;
-    padding: 15px;
-    text-align: center;
-/*    border-style: solid;    
-    border-width: 2px;
-    border-color: black;  */
-    display: inline-block;
-    background-color: white;
-    background-color: #EEAAAA;        
-}
-
-a {
-    text-decoration: none;
-    color: green;
-}
-
-#main-content {
-    overflow: hidden; /* magically clears all of your floats */
-}
-
-#main-content h3 {
-    font-size: 30px;
-    color: purple;
-}
-
-#main-content img {
-    border: 2px solid black;    
-    max-width: 100%; /* RWD */
-
-}
-
-.column {
-    float: left;
-    width: 30%;
-    padding: 15px;
+.center-block {
     text-align: center;
 }
 
-.column img {
-    width: 90%;
-    max-width: 90%; /* cojo often does max-width in pixels, so that it is fixed */
-    border-radius: 50%;
+#input-outer-wrapper {
+    margin-left: 20%;
+    margin-right: 20%;    
+    text-align: center;
 }
 
-.column h4 {
-    font-size: 14px;
-    color: orange;
-}
-
-.column .btn {
-    border: 2px solid black;        
-    background: rgba(45,11,31,.5);
-    display: inline-block; /* woot */
-    color: #fafafa;
-    margin: 20px;
-}
-
-.column .btn:hover {
-    background: rgba(45,11,31,.5);
-    color: #fafafa;
+#input-outer-wrapper {
+    text-align: left;
 }
 
 select {
     vertical-align: top;
-}
-
-/* these need to go at the bottom */
-/* work down from biggest to smallest? */
-
-/* iPad */
-@media screen and (max-width: 1024px) {
-    .container {width: 90%;}  /* to avoid wrapping */
-    .column {width: 80%; float: none; margin: 0 auto;}
-    #hero {height: 300px; background-size: contain;}
-    #hero img {margin-top: 100px;}
 }
